docs/pages/versions/v56.0.0/sdk/ui/jetpack-compose/flowrow.mdx
---
title: FlowRow
description: A Jetpack Compose FlowRow component for wrapping children horizontally.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { Diagram } from '~/ui/components/Diagram';

Expo UI FlowRow matches the official Jetpack Compose [FlowRow](https://developer.android.com/reference/kotlin/androidx/compose/foundation/layout/package-summary#FlowRow) API and arranges children in a horizontal flow that wraps to the next line when it runs out of space.

<div className="mx-auto w-fit [&_img]:max-h-[360px] [&_img]:w-auto">
  <Diagram
    source="/static/images/expo-ui/flowrow/android-light.webp"
    darkSource="/static/images/expo-ui/flowrow/android-dark.webp"
    alt="Six assist chip tags wrapping across multiple lines"
    disableSrcSet
  />
</div>

## Installation

<APIInstallSection />

## Usage

`FlowRow` arranges children in a horizontal flow that wraps to the next line when it runs out of space.

```tsx FlowRowExample.tsx
import { Host, FlowRow, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function FlowRowExample() {
  const tags = ['React Native', 'Expo', 'Android', 'Jetpack Compose', 'Material 3', 'Kotlin'];

  return (
    <Host matchContents>
      <FlowRow
        horizontalArrangement={{ spacedBy: 8 }}
        verticalArrangement={{ spacedBy: 8 }}
        modifiers={[paddingAll(16)]}>
        {tags.map(tag => (
          <Text key={tag}>{tag}</Text>
        ))}
      </FlowRow>
    </Host>
  );
}
```

## API

```tsx
import { FlowRow } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/flowrow" apiName="FlowRow" />
